// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <ArrowLeft /> icon should render ArrowLeft icon correctly with default props 1`] = `
<svg
  className="arrowLeftIcon"
  height={40}
  viewBox="0 0 20 20"
  width={40}
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    ArrowLeft Icon
  </title>
  <path
    className="arrowLeftIconPath"
    d="M14.52,18.48a.5.5,0,0,0,.33-.88L6.23,10,14.85,2.4a.5.5,0,1,0-.66-.75l-9,8a.5.5,0,0,0,0,.75l9,8A.5.5,0,0,0,14.52,18.48Z"
    fill="currentColor"
  />
</svg>
`;

exports[`Test <ArrowLeft /> icon should render ArrowLeft icon correctly with props 1`] = `
<svg
  className="testClassname"
  height={30}
  viewBox="0 0 20 20"
  width={30}
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    ArrowLeft Icon
  </title>
  <path
    className="arrowLeftIconPath"
    d="M14.52,18.48a.5.5,0,0,0,.33-.88L6.23,10,14.85,2.4a.5.5,0,1,0-.66-.75l-9,8a.5.5,0,0,0,0,.75l9,8A.5.5,0,0,0,14.52,18.48Z"
    fill="#a4a1a1"
  />
</svg>
`;
